--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+	  <header>
+		  <nav>
+			  <ul>
+				  <li>Home</li>
+				  <li>About</li>
+			  </ul>
+		  </nav>
+	  </header>
     <h1>Welcome</h1>
 	  <h1>Hello World</h1>
 	<script src="index.js"></script>
