--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+	  <footer>
+		  <div>
+			  <a>2023 Copyrights</a>
+		  </div>
+	  </footer>
 	<script src="index.js"></script>
   </body>
 </html>
