--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h1>Welcome</h1>
 	  <h1>Hello World</h1>
 	<script src="index.js"></script>
+	  <footer>Copyrights @ 2024</footer>
   </body>
 </html>
